option java_package = "com.app.empire.protocol.pb.battle";
option java_outer_classname = "DamageMsgProto";

message DamageMsg {
	optional int64 sourceId = 1; //伤害源ID
	optional int64 targetId = 2; //目标ID
	optional int32 damageType = 3; //伤害类型
	optional int64 damageValue = 4; //伤害值
	optional int64 leftValue = 5; //剩余值
	optional int32 tipType = 6; // 0 正常 1 暴击 2 MISS
	optional int32 fromType = 7; //伤害源类型 1 技能，2 buffer ，3 陷阱 4  法宝
	optional int64 fromId = 8; //技能ID  法宝则为法宝禁制ID
	optional int32 order = 9; //第几段伤害
}

